--- a/scss/_navigation.scss
+++ b/scss/_navigation.scss
@@ -369,12 +369,16 @@ nav .nav-right {
   border: 1px solid rgba(0, 0, 0, 0.15);
   border-radius: .25rem;
   box-shadow: 0px 2px 10px -3px rgba(0, 0, 0, 0.25);
+
+  z-index: 5; //This is because otherwise they can disappear behind select items, buttons, etc
 }
 
 nav .parent {
   display: block;
   position: relative;
   line-height: 30px;
+
+  z-index: auto; //This is just so that the dropdown hamburger-button doesn't drown behind other elements
 }
 
 /**
@@ -386,7 +390,6 @@ nav .parent {
 .nav-right > .parent{
   display: inline-block;
   cursor: pointer;
-  z-index: 4; //This is because otherwise they can disappear behind select items, buttons, etc
 }
 
 /**
